# SOAR

./: .gitattributes  .gitignore  env_sample.toml  pyproject.toml  readme.md  requirements.txt
analysis/cell_type_annotation/: answer_cleansing.py  answer_samples.py  bleu_eval.py  eval_multiple.py  label_mapping.py  ontobio_cell_type.py  squad_eval.py
configs/: config_cell_type_annotation.py
configs/cell_type_annotation/: dataset.py  experiment_soar_rna.py  misc.py  slurm.py
scripts/: annotate_cell_type.py
soar_benchmark/: __init__.py  cli.py  dataset.py  pipeline.py  run.py  task.py  train.py
soar_benchmark/bioontology/: decode.py
soar_benchmark/configs/: config_cell_type_annotation.py
soar_benchmark/configs/cell_type_annotation/: dataset.py  experiment_soar_rna.py  misc.py  slurm.py
soar_benchmark/datasets/: soar_rna.json
soar_benchmark/openai/: decoder.py
soar_benchmark/prompt_templates/: factory.py
soar_benchmark/utils/: answer_cleansing.py
src/: dataset.py  pipeline.py  task.py  train.py
src/bioontology/: decode.py
src/openai/: decoder.py
src/prompt_templates/: factory.py
